# web-3d

./: Cargo.toml  README.md  index.html  index.scss
src/: main.rs  rendering.rs
src/engine/: define.rs  load.rs  scene.rs
src/rendering/: blit_shading.rs  bloom_shading.rs  composite_shading.rs  differed_shading.rs  forward_shading.rs  line_grid_shading.rs  sky_shading.rs  webgpu.rs
src/shader/: blit.wgsl  bloom.wgsl  composite.wgsl  line.wgsl  sky.wgsl
src/web/: eventlistener.rs  gui.rs
