
# $cargo build --target wasm32-unknown-unknown
# other target is not working

# after
# $cargo install trunk
# $trunk build

[package]
name 		= "wgpu-wasm-3d-renderer"
version 	= "0.1.0"
edition 	= "2021"

[dependencies]
log 					 = "0.4.22"
gloo 					 = "0.11.0"
futures 				 = "0.3.30"
wee_alloc 				 = "0.4.5"
console_error_panic_hook = "0.1.7"
wasm-logger 			 = "0.2.0"
wasm-bindgen 			 = "0.2.92"
wasm-bindgen-futures 	 = "0.4.42"
wgpu 					 = "23.0.1"

glam 	 = "0.28.0"
bytemuck = { version = "1.16.1", features = ["derive", "min_const_generics"]}
web-time = "1.1.0"
gltf 	 = { version = "1.4.1", features = ["KHR_materials_pbrSpecularGlossiness"]}
reqwest  = "0.11"
anyhow   = "1.0.93"
cfg-if	 = "1.0.0"
image	 = { version = "0.25.5", default-features = false, features = ["png", "bmp"]}

env_logger = "0.11.6"

[dependencies.web-sys]
version = "0.3.72"
features = [
	'CanvasRenderingContext2d',
	'CssStyleDeclaration',
	'Document',
	'Element',
	'EventTarget',
	'HtmlCanvasElement',
	'HtmlSelectElement',
	'HtmlElement',
	'MouseEvent',
	'WheelEvent',
	'KeyboardEvent',
	'InputEvent',
	'Node',
	'HtmlCollection',
	'Window',
	'Location',
	'Performance'
	]
